--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+.main {
+    align-items: center;
+    background-color: #F5F5F5;
+    border-radius: 7px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 10px;
+    height: 400px;
+    width: 400px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+    font-size: 40px;
+    margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.instructions {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    margin-top: 0;
+    text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.die {
+    align-items: center;
+    border-radius: 7px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+    display: flex;
+    margin: 10px;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.die__number {
+    font-size: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dice__grid {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 50% 50%;
+}
+
+.button {
+    background-color: #5035FF;
+    border-radius: 7px;
+    color: white;
+    cursor: pointer;
+    font-size: 1.2rem;
+    padding: 10px 35px;
+    transition: 0.3s ease-in-out; 
+}
+
+.button:hover {
+    box-shadow: 0px 0px 10px #5035FF;
+}
+
+@media screen and (max-width: 400px){
+    .main {
+        width: 100%;
+    }
 }
